changed the file name of an image

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Chicken Fried Rice</h1>
     <p>A quick recipe for takeaway-style chicken fried rice with loads of flavour. I've included lots of swaps so you can use up whatever you've got in your pantry.</p>
-    <img src="/image/rice1.jpeg" alt="chicken fried rice">
+    <img src="/image/image1.jpeg" alt="chicken fried rice">
     <p>This chicken fried rice is such a great recipe for using up leftover scraps of chicken from your roast chicken dinner.
         <br>
         We hate seeing food go to waste, and will always try to find ways to turn leftovers into further meals or freeze for another day.
     </p>
   <h2>What do we need?</h2>
-  <img src="/image/rice3.jpeg" alt="recipe">
+  <img src="/image/image3.jpeg" alt="recipe">
   <h2>How to make chicken fried rice</h2>
   <p><i>Full recipe with detailed steps in the recipe card at the end of this post.</i></p>
   <ol>
